# QUANT-LLM-ASSISTANT

./: .env.example  Dockerfile  File Structure  README.md  dailylog.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  sast.yml  security.yml
api/: inference.proto
benchmarks/: latency_benchmark.py
caching/: redis_cache.py
docs/: production-readiness.md
k8s/: deployment.yaml  ingress.yaml
load_tests/: locustfile.py
models/: drift_monitor.py  llm_router.py
monitoring/: tracing.py
src/: __init__.py  agent.py  backtest.py  config.py  data_client.py  llm_agent.py  main.py  mcp_client.py  plotting.py  report.py
streaming/: kafka_producer.py
tests/: test_core.py
vector_store/: faiss_index.py
