[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-llm-assistant"
version = "1.0.0"
description = "Guardrailed quantitative research assistant"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0,<2", "openai>=1.30,<2", "requests>=2.32,<3",
  "pandas>=2.1,<3", "matplotlib>=3.8,<4", "fpdf2>=2.7,<3", "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.5,<1", "mypy>=1.10,<2", "bandit>=1.7,<2", "pip-audit>=2.7,<3"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src.config --cov=src.data_client --cov=src.backtest --cov=src.llm_agent --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
